--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>H Insights | Advanced Health Analytics & Consultations</title>
+    <title>Healthdata Insights | Advanced Health Analytics & Consultations</title>
     <style>
         /* Global Styles */
         :root {
@@ -734,7 +734,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container hero-content">
-            <h1>Advanced Health Data Analysis</h1>
+            <h1> Health Data Analysis</h1>
             <p>Transform your health data into actionable insights with our powerful analytics platform. Track, analyze, and optimize your health metrics with cutting-edge technology.</p>
             <a href="#input" class="btn">Start Health Analysis</a>
             <div class="hero-image">
